# lux

./: .cursorrules  .env.example  .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  Makefile  README.md  dev.envrc  dev.envrc.example  dev.override.envrc.example  docker-compose.yml  mix.exs  plan.md  test.envrc
.cursor/rules/: general.mdc  lux.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-updates.yml  lux-app-ci.yml  lux-ci.yml  lux-cli-ci.yml  main-ci.yml  security-scan.yml
cli/: mix.exs
config/: .formatter.exs  config.exs  runtime.exs
core/: README.md
examples/etherscan/: basic_examples.exs  token_analysis.exs
guides/: agents.livemd  agents.md  beams.livemd  beams.md  companies.md  contributing.md  cursor_development.md  lenses.livemd  lenses.md  multi_agent_collaboration.livemd  multi_agent_collaboration.md  prisms.livemd  prisms.md  python.md  role_management.md  running_a_company.livemd  signals.livemd  signals.md  testing.md  trading_system.livemd
lib/: lux.ex
lux/: .credo.exs  .gitignore  CHANGELOG.md  Makefile  mix.exs  test.envrc.example
lux/priv/python/: .gitignore  README.md  pyproject.toml
lux/priv/python/lux/: __init__.py  eval.py  packages.py  prism.py
lux/priv/python/tests/: conftest.py  test_atoms.py  test_eval.py
lux_app/: .credo.exs  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-start.sh  docker-stop.sh  mix.exs
lux_cli/: .gitignore  README.md  mix.exs
lux_core/: .gitignore  mix.exs
lux_web/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-start.sh  mix.exs
priv/python/: README.md  pyproject.toml
priv/python/hyperliquid_utils/: setup.py
priv/python/lux/: __init__.py  atoms.py  eval.py  prism.py  safe_atoms.py
priv/python/tests/: test_atoms.py  test_eval.py  test_packages.py
scripts/: configure-codespace-gpg.sh  refactor.sh  setup-codespace-ssh.sh  welcome.sh
test/: lux_test.exs  test_helper.exs
(+774 files in other folders)
