[tool.poetry]
name = "lux-python"
version = "0.1.0"
description = "Python components for the Lux framework"
authors = ["Robert Parcus <robertparcus@spectrallabs.xyz>"]
readme = "README.md"
packages = [{include = "lux"}]

[tool.poetry.dependencies]
python = "^3.12.3"
web3 = "^6.15.11"
eth-typing = "3.5.2"
eth-tester = {extras = ["py-evm"], version = "^0.11.0b2"}
nltk = "^3.9.1"
setuptools = "^75.8.2"
hyperliquid-python-sdk = "^0.10.1"
ckzg = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lux --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 